--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/lodash-es": "^4.17.10",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.15",
