--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,8 @@
   "rules": {
     "no-restricted-exports": "off",
     "no-param-reassign": "off",
-    "@typescript-eslint/default-param-last": "off",
+    "no-await-in-loop": "off",
+    "@typescript-eslint/no-shadow": "off",
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
     "jsx-a11y/label-has-associated-control": "off",
